Actualizo el mejor submit

--- a/TP2/Mejor_submit.ipynb
+++ b/TP2/Mejor_submit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,13 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_y_temp = installs['2019-04-21':'2019-04-23']\n",
+    "test_y_temp = installs['2019-04-20':'2019-04-22']\n",
     "test_y_temp = test_y_temp.reset_index()\n",
-    "test_y_temp['created'] = test_y_temp['created'] - pd.Timestamp(f'2019-04-21 00:00:00')\n",
+    "test_y_temp['created'] = test_y_temp['created'] - pd.Timestamp(f'2019-04-20 00:00:00')\n",
     "test_y_temp['created'] = test_y_temp['created'].transform(lambda x: x.total_seconds())\n",
     "test_y_temp = test_y_temp.groupby('ref_hash').agg({'created' : 'min'}).reset_index()\n",
     "test_y_temp = test_y_temp[[\"ref_hash\", \"created\"]]"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "metadata": {
     "scrolled": true
    },
@@ -91,76 +91,76 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 1, loss = 11471919694.85833168\n",
-      "Iteration 2, loss = 11455022237.13585281\n",
-      "Iteration 3, loss = 11423427849.14821434\n",
-      "Iteration 4, loss = 11380091983.65438271\n",
-      "Iteration 5, loss = 11326767241.04800606\n",
-      "Iteration 6, loss = 11264545143.74076653\n",
-      "Iteration 7, loss = 11194172464.41510582\n",
-      "Iteration 8, loss = 11116139698.32357979\n",
-      "Iteration 9, loss = 11030837734.05351257\n",
-      "Iteration 10, loss = 10938570506.51630592\n",
-      "Iteration 11, loss = 10839571976.75502777\n",
-      "Iteration 12, loss = 10734028061.07415962\n",
-      "Iteration 13, loss = 10622200645.64143372\n",
-      "Iteration 14, loss = 10504310266.58315468\n",
-      "Iteration 15, loss = 10380543538.42240143\n",
-      "Iteration 16, loss = 10251127971.60030365\n",
-      "Iteration 17, loss = 10116274718.48656654\n",
-      "Iteration 18, loss = 9976240746.04617691\n",
-      "Iteration 19, loss = 9831256447.15257645\n",
-      "Iteration 20, loss = 9681488777.88869667\n",
-      "Iteration 21, loss = 9527246986.50987053\n",
-      "Iteration 22, loss = 9368760674.47177505\n",
-      "Iteration 23, loss = 9206364064.41841888\n",
-      "Iteration 24, loss = 9040185162.85167313\n",
-      "Iteration 25, loss = 8870443539.97980690\n",
-      "Iteration 26, loss = 8697643180.26903725\n",
-      "Iteration 27, loss = 8522003535.80245972\n",
-      "Iteration 28, loss = 8343710323.20842171\n",
-      "Iteration 29, loss = 8163093407.69991589\n",
-      "Iteration 30, loss = 7980433292.91697407\n",
-      "Iteration 31, loss = 7796068464.99830437\n",
-      "Iteration 32, loss = 7610201570.92218113\n",
-      "Iteration 33, loss = 7423376756.80526161\n",
-      "Iteration 34, loss = 7235869947.59277344\n",
-      "Iteration 35, loss = 7048017125.24423409\n",
-      "Iteration 36, loss = 6860003600.44781208\n",
-      "Iteration 37, loss = 6672275489.45800781\n",
-      "Iteration 38, loss = 6485192631.30502796\n",
-      "Iteration 39, loss = 6299228794.44239521\n",
-      "Iteration 40, loss = 6114551412.14004421\n",
-      "Iteration 41, loss = 5931611211.87287235\n",
-      "Iteration 42, loss = 5750857098.26619911\n",
-      "Iteration 43, loss = 5572593717.47896194\n",
-      "Iteration 44, loss = 5397083556.47340298\n",
-      "Iteration 45, loss = 5224784165.88414383\n",
-      "Iteration 46, loss = 5056117340.48775291\n",
-      "Iteration 47, loss = 4891467306.70555687\n",
-      "Iteration 48, loss = 4731026265.55259895\n",
-      "Iteration 49, loss = 4575497051.53337002\n",
-      "Iteration 50, loss = 4425188808.34775639\n",
-      "Iteration 51, loss = 4280499012.51590490\n",
-      "Iteration 52, loss = 4141759689.14387178\n",
-      "Iteration 53, loss = 4009217988.78696251\n",
-      "Iteration 54, loss = 3883222451.60129499\n",
-      "Iteration 55, loss = 3764241545.12473917\n",
-      "Iteration 56, loss = 3652724915.13157129\n",
-      "Iteration 57, loss = 3548874908.57184982\n",
-      "Iteration 58, loss = 3452900603.96556902\n",
-      "Iteration 59, loss = 3365118228.31304741\n",
-      "Iteration 60, loss = 3285746746.48781347\n",
-      "Iteration 61, loss = 3214900205.49703407\n",
-      "Iteration 62, loss = 3152745896.56105137\n",
-      "Iteration 63, loss = 3099218010.34402275\n",
-      "Iteration 64, loss = 3054146316.82296848\n",
-      "Iteration 65, loss = 3017158586.23122597\n",
-      "Iteration 66, loss = 2987782238.40902758\n",
-      "Iteration 67, loss = 2965433185.66266775\n",
-      "Iteration 68, loss = 2949129982.89661121\n",
-      "Iteration 69, loss = 2937830231.53531551\n",
-      "Iteration 70, loss = 2930442143.63780260\n"
+      "Iteration 1, loss = 11576366108.18711472\n",
+      "Iteration 2, loss = 11559936411.48910904\n",
+      "Iteration 3, loss = 11529122923.94842529\n",
+      "Iteration 4, loss = 11486830366.32990074\n",
+      "Iteration 5, loss = 11434767506.96130753\n",
+      "Iteration 6, loss = 11374017605.53965759\n",
+      "Iteration 7, loss = 11305275017.08534050\n",
+      "Iteration 8, loss = 11229016381.96932793\n",
+      "Iteration 9, loss = 11145670591.30950546\n",
+      "Iteration 10, loss = 11055516753.05479431\n",
+      "Iteration 11, loss = 10958773361.83776283\n",
+      "Iteration 12, loss = 10855641891.75649643\n",
+      "Iteration 13, loss = 10746372616.28464317\n",
+      "Iteration 14, loss = 10631120850.41031265\n",
+      "Iteration 15, loss = 10510121062.03639793\n",
+      "Iteration 16, loss = 10383547384.22431755\n",
+      "Iteration 17, loss = 10251697205.54758453\n",
+      "Iteration 18, loss = 10114702519.68172836\n",
+      "Iteration 19, loss = 9972807993.08614922\n",
+      "Iteration 20, loss = 9826253038.25864983\n",
+      "Iteration 21, loss = 9675176862.92447281\n",
+      "Iteration 22, loss = 9519945363.31062317\n",
+      "Iteration 23, loss = 9360740436.27254677\n",
+      "Iteration 24, loss = 9197786112.58825684\n",
+      "Iteration 25, loss = 9031362905.56692505\n",
+      "Iteration 26, loss = 8861690830.28008461\n",
+      "Iteration 27, loss = 8689082652.58104324\n",
+      "Iteration 28, loss = 8513808233.75931358\n",
+      "Iteration 29, loss = 8336186414.32683182\n",
+      "Iteration 30, loss = 8156419067.58905220\n",
+      "Iteration 31, loss = 7974783967.11692524\n",
+      "Iteration 32, loss = 7791677355.05823517\n",
+      "Iteration 33, loss = 7607296876.43548584\n",
+      "Iteration 34, loss = 7421981928.91873360\n",
+      "Iteration 35, loss = 7236200065.43603230\n",
+      "Iteration 36, loss = 7050208561.58341789\n",
+      "Iteration 37, loss = 6864248476.30778027\n",
+      "Iteration 38, loss = 6678587976.70300007\n",
+      "Iteration 39, loss = 6493695778.67094040\n",
+      "Iteration 40, loss = 6309797592.45792580\n",
+      "Iteration 41, loss = 6127301135.64804554\n",
+      "Iteration 42, loss = 5946643272.55485439\n",
+      "Iteration 43, loss = 5768086749.43512821\n",
+      "Iteration 44, loss = 5592011989.84187412\n",
+      "Iteration 45, loss = 5418723031.31871223\n",
+      "Iteration 46, loss = 5248621303.13574028\n",
+      "Iteration 47, loss = 5082073829.68950081\n",
+      "Iteration 48, loss = 4919471405.41713619\n",
+      "Iteration 49, loss = 4761176828.54356098\n",
+      "Iteration 50, loss = 4607560011.35223770\n",
+      "Iteration 51, loss = 4459071358.04120255\n",
+      "Iteration 52, loss = 4316013322.44193268\n",
+      "Iteration 53, loss = 4178713929.25496387\n",
+      "Iteration 54, loss = 4047497944.84450722\n",
+      "Iteration 55, loss = 3922808356.50599575\n",
+      "Iteration 56, loss = 3804896380.20339584\n",
+      "Iteration 57, loss = 3694080713.13606071\n",
+      "Iteration 58, loss = 3590775027.01633883\n",
+      "Iteration 59, loss = 3495166678.68637371\n",
+      "Iteration 60, loss = 3407438836.61405611\n",
+      "Iteration 61, loss = 3327952772.46561241\n",
+      "Iteration 62, loss = 3256722259.46570969\n",
+      "Iteration 63, loss = 3193669570.77693176\n",
+      "Iteration 64, loss = 3138978580.03684664\n",
+      "Iteration 65, loss = 3092710565.70672846\n",
+      "Iteration 66, loss = 3054404848.79099846\n",
+      "Iteration 67, loss = 3023597720.82095480\n",
+      "Iteration 68, loss = 2999710197.58333063\n",
+      "Iteration 69, loss = 2981952344.46960449\n",
+      "Iteration 70, loss = 2969406951.98246145\n"
      ]
     },
     {
@@ -183,7 +183,7 @@
        "       validation_fraction=0.1, verbose=True, warm_start=False)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "146283.52378673185"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(predicciones)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,12 +261,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "resultados.to_csv(\"prediccion_mlp_simple_replica.csv\", index=False)"
+    "resultados.to_csv(\"prediccion_mlp_simple_otra_vent.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
